kubernetes/order/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
  - port: 8084
    targetPort: 8084
    protocol: TCP
    name: http
  selector:
    app: order-service
